elastic-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: elastic-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: kb-listener
      hostname: kibana.elastic.com
      port: 5601
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: kb-domain-tls-secret
    - name: flt-listener
      hostname: fleet-server.elastic.com
      port: 8220
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: flt-domain-tls-secret
    - name: es-listener
      hostname: elasticsearch.elastic.com
      port: 9200
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: es-domain-tls-secret
